@@ -2,44 +2,36 @@ package de.xtkq.voidgen.utils;
 
 import com.google.gson.Gson;
 import de.xtkq.voidgen.VoidGen;
-import org.bukkit.plugin.java.JavaPlugin;
+import lombok.Getter;
 
 import javax.net.ssl.HttpsURLConnection;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 import java.util.Map;
 
 public class UpdateUtils {
-    private static final String GITHUB_API = "https://api.github.com/repos/xtkq-is-not-available/%s/releases/latest";
+    private static final String GITHUB_API = "https://api.github.com/repos/NicoNekoDev/%s/releases/latest";
+    @Getter
     private static boolean updateAvailable = false;
+    @Getter
     private static String latestRelease;
+    @Getter
     private static String latestReleaseURL;
-    private final JavaPlugin plugin;
+    private final VoidGen plugin;
 
-    public UpdateUtils(JavaPlugin paramPlugin) {
+    public UpdateUtils(VoidGen paramPlugin) {
         this.plugin = paramPlugin;
         latestRelease = paramPlugin.getDescription().getVersion();
-    }
-
-    public static boolean isUpdateAvailable() {
-        return updateAvailable;
-    }
-
-    public static String getLatestRelease() {
-        return latestRelease;
-    }
-
-    public static String getLatestReleaseURL() {
-        return latestReleaseURL;
     }
 
     public void checkForUpdates() {
         VoidGen.morePaperLib.scheduling().asyncScheduler().runAtFixedRate(() -> {
             Gson gson = new Gson();
             try {
-                URL url = new URL(String.format(GITHUB_API, this.plugin.getName()));
+                URL url = new URI(String.format(GITHUB_API, this.plugin.getName())).toURL();
                 HttpsURLConnection httpsURLConnection = (HttpsURLConnection) url.openConnection();
                 httpsURLConnection.setRequestMethod("GET");
                 httpsURLConnection.setRequestProperty("accept", "application/vnd.github.v3+json");
@@ -53,7 +45,7 @@ public class UpdateUtils {
                         updateAvailable = true;
                         latestRelease = ((String) map.get("name")).substring(1);
                         latestReleaseURL = (String) map.get("html_url");
-                        this.plugin.getLogger().info("Update v" + latestRelease + " is available: " + latestReleaseURL);
+                        this.plugin.getLogger().warning("Update v" + latestRelease + " is available: " + latestReleaseURL);
                     }
                 }
             } catch (Exception ignored) {
